--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,11 @@
   "dependencies": {
     "angular-ui-router": "^0.2.18",
     "bootstrap": "^3.3.6",
+    "angular-local-storage": "^0.2.7",
+    "angular-mocks": "^1.5.5",
+    "moment": "^2.13.0",
+    "angular-toastr": "^1.7.0",
+    "angular-animate": "^1.5.5",
     "toastr": "^2.1.2"
   }
 }
